--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="portfolio-container">
             <div class="portfolio-row header-wrap">
                 <div class="brand-name">
-                    <a href="#" class="logo">Muhammed Emin BARKOÇ</a>
+                    <a href="login.html" class="logo">Muhammed Emin BARKOÇ</a>
                 </div>
                 <div class="portfolio-navbar">
                     <ul>
