--- a/login.html
+++ b/login.html
@@ -8,24 +8,35 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="box">
-        <div class="container">
-            <div class="top-header">
-                <header>Login</header>
-            </div>
+    <form id="loginForm" action="result.php" method="post" onsubmit="return validateForm()">
 
-            <div class="input-field">
-                <input type="text" class="loginInput" placeholder="Kullanıcı Adı" required>
-                <i class="bx bx-user"></i>
-            </div>
-            <div class="input-field">
-                <input type="password" class="loginInput" placeholder="Şifre" required>
-                <i class="bx bx-lock-alt"></i>
-            </div>
-            <div class="input-field">
-                <input type="submit" class="loginSubmit" required>
+        <div class="box">
+            <div class="container">
+                <h1>Giriş Yap</h1>
+                <div class="input-field">
+                    <input type="text" name="username" class="loginInput" id="username" placeholder="Kullanıcı Adı" required>
+                    <i class="bx bx-user"></i>
+                </div>
+                <div class="input-field">
+                    <input type="password" class="loginInput" id="password" placeholder="Şifre" required>
+                    <i class="bx bx-lock-alt"></i>
+                </div>
+                <div class="input-field">
+                    <input type="submit" class="loginSubmit" value="Login" required>
+                    <p id="error-message" class="error"></p>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
+
+    <script>
+        function validateForm() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            const errorMessage = document.getElementById('error-message');
+            
+            
+        }
+    </script>
 </body>
 </html>
