--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                             </div>
                             <div class="iletisim-detay">
                                 <h5>Telefon</h5>
-                                <span>0535 534 16 65</span>
+                                <span>0532 019 19 19</span>
                             </div>
                         </li>
                         <li class="iletisim-üye">
@@ -470,7 +470,7 @@
                             </div>
                             <div class="iletisim-detay">
                                 <h5>Email</h5>
-                                <span>eclakjdsg@gmail.com</span>
+                                <span>emin.barkoc@ogr.sakarya.edu.tr</span>
                             </div>
                         </li>
                         <li class="iletisim-üye">
@@ -479,7 +479,7 @@
                             </div>
                             <div class="iletisim-detay">
                                 <h5>Adres</h5>
-                                <span>0535 534 16 65</span>
+                                <span>Sakarya Üniversitesi</span>
                             </div>
                         </li>
                     </ul>
