--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
             <div class="takimimiz-table">
 
-                <table class="puan-durumu" border="1">
+                <table id="responsiveTable" class="puan-durumu" border="1">
                     <head>
                         <tr>
                             <th>Sıra</th>
